Fix up homepage styles in light of 'break the grid' changes

--- a/public/less/media/min-540.less
+++ b/public/less/media/min-540.less
@@ -4,5 +4,5 @@
   .auth .btn { width: 48.3333%; }
   /* Changes 'includes/form.less' */
   .fs-half { width: 48.571428571%; }
-  .fs-half + .fs-half { float: right; }
+  .fs-half + .fs-half, .fs-half + label + .fs-half { float: right; }
 }
