--- a/public/less/pages/home.less
+++ b/public/less/pages/home.less
@@ -1,1 +1,3 @@
 .auth .btn { margin: 0 0 1.25rem; }
+
+#home .main { margin: 0 @margin_width; }
